@@ -1,3 +1,11 @@
+2016-08-04  Niels Möller  <nisse@lysator.liu.se>
+
+	* rsa-sign-tr.c (rsa_compute_root_tr): Return failure if any of p,
+	q or n is even, to avoid crashing inside mpz_powm_sec. Invalid
+	keys with even modulo are rejected by rsa_public_key_prepare and
+	rsa_private_key_prepare, but some applications, notably gnutls,
+	don't use them.
+
 2016-07-31  Niels Möller  <nisse@lysator.liu.se>
 
 	* rsa.c (_rsa_check_size): Check that n is odd. Otherwise, using
